@@ -20,24 +20,18 @@ dnl
 dnl file build-config/m4/scorep_instrumentation_flags.m4
 
 AC_DEFUN([SCOREP_CC_FLAG_TEST],[
-    AC_LANG_PUSH(C)
+    AC_LANG_PUSH([C])
     save_CFLAGS=$CFLAGS
     CFLAGS="$CFLAGS $1"
 
     AC_MSG_CHECKING([whether compiler understands $1])
-    AC_COMPILE_IFELSE([
-        AC_LANG_SOURCE([
-            int main()
-            {
-                return 0;
-            }
-            ])],
-	[AC_MSG_RESULT(yes)
-	 scorep_compiler_instrumentation_cppflags="$1"],
-        [AC_MSG_RESULT(no)])
+    AC_COMPILE_IFELSE([AC_LANG_PROGRAM()],
+        [AC_MSG_RESULT([yes])
+         scorep_compiler_instrumentation_cppflags="$1"],
+        [AC_MSG_RESULT([no])])
 
    CFLAGS="$save_CFLAGS"
-   AC_LANG_POP(C)
+   AC_LANG_POP([C])
 ])
     
 
